# slurmise

./: .gitignore  .pre-commit-config.yaml  README.md  lint_config.toml  pyproject.toml
.github/workflows/: docs.yaml  release.yaml  test.yaml
docs/: conf.py  index.rst  install.rst  modules.rst  slurmise.rst  tests.rst
docs/_templates/: layout.html
src/slurmise/: __about__.py  __init__.py  __main__.py  api.py  config.py  extras.py  job_data.py  job_database.py  parse_args.py  slurm.py  utils.py
src/slurmise/extras/: README.md  snake_parsers.py  snake_patching.py
src/slurmise/fit/: __init__.py  kneighbors_fit.py  poly_fit.py  resource_fit.py
src/slurmise/job_parse/: file_parsers.py  job_specification.py
tests/: conftest.py  nupack2.h5  test_api.py  test_config.py  test_fit.py  test_job_database.py  test_main.py  test_parsing.py  test_record.py  test_slurm.py  test_snake_parsers.py  test_snake_patching.py  test_snakemake.py  test_utils.py  utils.py
tests/fit/: test_fit_init.py  test_knn_fit.py  test_polynomial_fit.py
