[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmise"
dynamic = ["version"]
description = 'Simple slurm resource estimation'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Troy Comi", email = "tcomi@princeton.edu" },
  { name = "Ioannis Paraskevakos", email = "iparask@princeton.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "numpy",
  "h5py",
  "pandas",
  "scikit-learn",
  "joblib",
  "regex",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "coverage",
  "pytest-random-order",
  "coveralls",
  "pre-commit",
  "isort",
  "mypy>=1.0.0",
  "poethepoet",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme"
  ]

snakemake = [
  "snakemake>=6",
]

[project.urls]
Documentation = "https://github.com/PrincetonUniversity/slurmise#readme"
Issues = "https://github.com/PrincetonUniversity/slurmise/issues"
Source = "https://github.com/PrincetonUniversity/slurmise"

[project.scripts]
slurmise = "slurmise.__main__:main"

[tool.setuptools_scm]
version_file = "src/slurmise/__about__.py"

[tool.poe.tasks]
check = "mypy --install-types --non-interactive src/slurmise tests"
test = "pytest --cov=slurmise --random-order"
fmt-check = {shell = "ruff format --check . && ruff check ."}
smk-test-v7 = "uv run --python 3.11 --with 'snakemake==7.32.4' --with 'pulp<2.8.0' pytest"
smk-test-v8 = "uv run --python 3.12 --with 'snakemake>=8.0,<9.0' pytest"
smk-test-v9 = "uv run --python 3.13 --with 'snakemake>=9.0' pytest"

[tool.coverage.run]
source_pkgs = ["slurmise", "tests"]
branch = true
parallel = false
omit = [
  "src/slurmise/__about__.py",
  "src/slurmise/extras/*",
]

[tool.coverage.paths]
slurmise = ["src/slurmise", "*/slurmise/src/slurmise"]
tests = ["tests", "*/slurmise/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
exclude = ["__about__.py"]

[tool.ruff.lint]
ignore = ["ANN001",
          "SIM118",
          "T201",
          "D100",
          "INP001",
          "D212",
          "PTH119",
          "D415",
          "D103",
          "D411",
          "D410",
          "COM812",
          "D205",
          "S101",
          "D202",
          "SLF001",
          "D401",
          "D400",
          "FBT001",
          "ANN202",
          "PTH123",
          "FBT002",
          "ANN201"]
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.per-file-ignores]
"**/scripts/*" = [
  "INP001",
  "T201",
]
"**/tests/**/*" = [
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S",
  "TID252",
  "T201",
  "DTZ005",
  "N802",
  "ARG005"
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["slurmise"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.isort]
line_length = 120
skip = ["__about__.py"]
